moved functions to different files basically finished 1 and 2 added notes from today

--- a/homework/hw_4-dec_02/hw_4.tex
+++ b/homework/hw_4-dec_02/hw_4.tex
@@ -189,7 +189,33 @@
 \end{enumerate}
 }
 
-
+Let $E_k = \qty(\frac{\norm{e^{(k)}}_\infty}{\norm{e^{(0)}}_\infty})^{\nicefrac{1}{k}}$
+\begin{table}
+\caption*{$h = 2^{-5} \qquad \text{tol}=10^{-6}$}
+\begin{center}
+\begin{tabular}{||ll||lllll||l||}
+\hline\hline
+   $\nu_1$ &   $\nu_2$ & $E_1$ & $\displaystyle\frac{1}{2}\sum_{i=1}^2E_i$ & $\displaystyle\frac{1}{3}\sum_{i=1}^3E_i$ & $\displaystyle\frac{1}{5}\sum_{i=1}^5E_i$ & $\displaystyle\frac{1}{\max}\sum_{i=1}^{\max}E_i$ & iterations \\
+\hline\hline
+      0 &      0 & 0.396875   & 0.454525 & 0.50511  & 0.593587 & 0.767165 &    14 \\\hline
+      0 &      1 & 0.305393   & 0.288137 & 0.318529 & 0.422289 & 0.749344 &    23 \\
+      1 &      0 & 0.240477   & 0.244411 & 0.316576 & 0.441658 & 0.745356 &    20 \\\hline
+      0 &      2 & 0.179352   & 0.185095 & 0.262303 & 0.390773 & 0.669029 &    16 \\
+      1 &      1 & 0.0798504  & 0.181037 & 0.282042 & 0.420886 & 0.652608 &    13 \\
+      2 &      0 & 0.0987041  & 0.212508 & 0.311878 & 0.447004 & 0.670126 &    13 \\\hline
+      0 &      3 & 0.121375   & 0.166698 & 0.251102 & 0.381308 & 0.617268 &    13 \\
+      1 &      2 & 0.0556845  & 0.166925 & 0.267998 & 0.40584  & 0.622475 &    12 \\
+      2 &      1 & 0.00870737 & 0.164355 & 0.276806 & 0.420276 & 0.596134 &    10 \\
+      3 &      0 & 0.0844652  & 0.218674 & 0.3192   & 0.451548 & 0.616711 &    10 \\\hline
+      0 &      4 & 0.0914259  & 0.15609  & 0.24315  & 0.373443 & 0.592315 &    12 \\
+      1 &      3 & 0.043239   & 0.158128 & 0.258661 & 0.395822 & 0.594257 &    11 \\
+      2 &      2 & 0.0115739  & 0.158641 & 0.267094 & 0.407947 & 0.584198 &    10 \\
+      3 &      1 & 0.0376952  & 0.186759 & 0.293044 & 0.429958 & 0.576603 &     9 \\
+      4 &      0 & 0.117969   & 0.240874 & 0.334553 & 0.460074 & 0.571272 &     8 \\
+\hline\hline
+\end{tabular}
+\end{center}
+\end{table}
 
 
 
